<resources>
    <string name="app_name">Notepad App for Android with Contact,Image,Audio</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="pro_version">Pro Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_the_app">Share The App</string>
    <string name="rate_the_app">Rate The App</string>
    <string name="note_title">Header/Title</string>
    <string name="note_text">Note</string>
    <string name="note_time">26 August,2019 8:45 AM</string>
    <string name="note_added">Note is added</string>
    <string name="add_image">Add Image</string>
    <string name="add_phone_no">Add Phone No</string>
    <string name="add_audio">Add Audio</string>
    <string name="choose_color">Choose Color</string>
    <string name="share_note">Share Note</string>
    <string name="choose_background_color">Choose Background Color</string>
    <string name="empty_string">""</string>
    <string name="field1">Title</string>
    <string name="note">Note</string>
    <string name="add_phone_number_manually">Add Phone Number Manually</string>
    <string name="pick_from_contact">Pick From Contact</string>
    <string name="pick_from_files">Pick From Files</string>
    <string name="choose_an_option_to_continue">Choose an Option to Continue</string>
    <string name="permission_is_required">Permission is required to enable this feature. Please allow permission and try again</string>
    <string name="contact_permission_is_required">Permission is required to read contact. Please allow permission and try again</string>
    <string name="storage_permission_is_required">Permission is required to load images. Please allow permission and try again</string>
    <string name="camera_permission_is_required">Permission is required to capture image. Please allow permission and try again</string>
    <string name="write_storage_permission_is_required">Permission is required to write file on storage. Please allow permission and try again</string>
    <string name="test_contact">Test Contact</string>
    <string name="test_num">+8801521445110</string>
    <string name="text_copied">Text is copied to clipboard</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="ok_continue">Continue</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_check_list">Checklist</string>
    <string name="voice_input_not_supported">Sorry! Voice input is not supported on this device</string>
    <string name="no_phone_number">No Phone Number!! Please add a phone number and try again</string>
    <string name="no_email_address">No Email Address!! Please add an email address and try again</string>
    <string name="dummy_title">Dummy Title</string>
    <string name="dummy_size">2.52 MB</string>
    <string name="email">Email</string>
    <string name="add_email">Add Email</string>
    <string name="contacts">Contacts</string>
    <string name="audio">Audio</string>
    <string name="save">Save</string>
    <string name="call">Call</string>
    <string name="copy">Copy</string>
    <string name="remove">Remove</string>
    <string name="note_component_deleted">Note Component Removed!!</string>
    <string name="note_is_cleared">Note list is cleared!!</string>
    <string name="email_inserted">Email Added!</string>
    <string name="contact_inserted">Contact Added!</string>
    <string name="audio_inserted">Audio Added!</string>
    <string name="image_inserted">Image Added!</string>
    <string name="check_list_inserted">Check List Added!</string>
    <string name="created">Created</string>
    <string name="emails">Emails</string>
    <string name="nothing_to_save">Nothing to save!!</string>
    <string name="save_note">Save Note?</string>
    <string name="clear_note">Clear Note?</string>
    <string name="clear_note_msg">Are you sure to clear all note?</string>
    <string name="note_is_not_saved">Note is note saved. Do you want to save the note?</string>
    <string name="added_to_favorite">Note is marked as important</string>
    <string name="removed_from_favorite">Note is removed from important</string>
    <string name="home">Home</string>
    <string name="important">Importants</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort By</string>
    <string name="notes_are_sorted">Notes are sorted</string>
    <string name="email_support">Email Support</string>
    <string name="no_note_found">No Note Found!!\n Tap the \'+\' button to add new note</string>
    <string name="no_important_note_found">No Note is marked as important!!</string>
    <string name="no_contact_found">No Contact Found!!</string>
    <string name="no_check_list_found">No Check List Found!!</string>
    <string name="no_email_found">No Email Found!!</string>
    <string name="delete_contacts">Delete All Contacts</string>
    <string name="delete_emails">Delete All Emails</string>
    <string name="delete_images">Delete All Images</string>
    <string name="delete_audio">Delete All Audio</string>
    <string name="delete_notes">Delete Note</string>
    <string name="note_is_removed">Note is removed!</string>
    <string name="remove_all_note">Remove All Notes</string>
    <string name="pro_features">No Ads, No Interruptions\nAdd Unlimited Components To Note</string>
    <string name="one_month">1\nMonth</string>
    <string name="six_month">6\nMonths</string>
    <string name="one_year">12\nMonths</string>
    <string name="one_month_price">0.99$</string>
    <string name="six_month_price">2.99$</string>
    <string name="one_year_price">4.99$</string>
    <string name="life_time_price">6.99$</string>
    <string name="continue_">Continue</string>
    <string name="life_time">Life\nTime</string>
    <string name="admob_app_id">@string/admob_app_id_real</string>
    <string name="admob_app_id_test">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_app_id_real">ca-app-pub-7505528330087753~8721763907</string>
    <string name="admob_banner_ad_id">@string/admob_banner_ad_real</string>
    <string name="admob_banner_ad_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_banner_ad_real">ca-app-pub-7505528330087753/5392467953</string>
    <string name="admob_interstitial_ad_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_interstitial_ad_real">ca-app-pub-7505528330087753/5200896267</string>
    <string name="admob_rewarded_video_ad_test">ca-app-pub-3940256099942544/5224354917</string>
    <string name="admob_rewarded_video_ad_real">ca-app-pub-7505528330087753/7856825678</string>
    <string name="enter_item_title">Enter Item Title</string>
    <string name="add_item">Add Item\\</string>
    <string name="new_item_added">New Item Added!</string>
    <string name="check_list">Check List</string>
    <string name="backup_and_restore">Backup and Restore</string>
    <string name="backup">Backup</string>
    <string name="backup_note">Backup Notes</string>
    <string name="restore_note">Restore Notes</string>
    <string name="check_list_desc">Tap to see full list</string>
    <string name="check_list_name">Check List Title</string>
    <string name="check_list_updated">Check List Updated!!</string>
    <string name="file_save__message">Save File As...</string>
    <string name="file_name">Enter File Name</string>
    <string name="file_already_exists_msg">File Already Exists!! Please choose a different name or overright it</string>
    <string name="cancel">Cancel</string>
    <string name="override">Override?</string>
    <string name="got_it">Got It!</string>
    <string name="saved_successfully">File Saved Successfully at\n</string>
    <string name="please_wait">Please Wait....</string>
    <string name="record_audio">Record Audio</string>
    <string name="take_photo">Take Photo</string>
    <string name="love_note_it">Love Noteit?</string>
    <string name="restore_warning_title">Please Notice!!!</string>
    <string name="restore_warning_message">Restoring data from backup will erase all the currently saved data and overwrite them with your backup data. Are you sure to restore?</string>
    <string name="rate_us_message">Please rate us 5 - stars and good review. Your ratings and review will help us to grow and make the app even better</string>
    <string name="rate">Rate</string>
    <string name="no_thanks">No Thanks</string>
    <string name="noteit_pro">Noteit Premium</string>
    <string name="upgrade">Buy Pro Version</string>
    <string name="watch_ad">Watch ad to unlock for free</string>
    <string name="hi_there">Hi There!</string>
    <string name="upgrade_msg">Please upgrade to one of our premium plan.</string>
    <string name="why_msg">We developers really work hard to provide you the best content. Please support us by spending some little bucks so that we can make it even better</string>
    <string name="why_upgrade">Why Upgrade?</string>
    <string name="audio_record_not_supported">Sorry!! This device does not support to record audio</string>
    <string name="app_desc">Create Note With More Then Text</string>
    <string name="purchase_is_succeeded">Your Purchase is succeeded. Please restart the app to enjoy the premium version.\nThanks for your support.</string>
    <string name="already_paid">You have already subscribed to us. Please try again when your subscription is finished</string>
    <string name="back">Back</string>
    <string name="note_pad">Note Pad</string>
    <string name="local_storage_backup">Local Storage Backup</string>
    <string name="cloud_storage_backup">Cloud Storage Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_wait_msg">Please wait until the backup progress is finished. This may take a while</string>
    <string name="backup_done_msg">Backup Done Successfully!!!</string>
    <string name="restore_done_msg">Backup Restored Successfully!!!</string>
    <string name="restore_progress_text">Please wait while data is restored from backup file</string>
    <string name="phone_storage">Phone Storage</string>
    <string name="sd_card_storage">SD Card</string>
    <string name="storage_option_label">Storage to backup or restore</string>
    <string name="sd_card_not_available">SD Card Not Available</string>
    <string name="backup_file_not_found">No Backup File Found!!!</string>
    <string name="backup_restore_success_message">Backup Restored Successfully!!!</string>
    <string name="backup_failed_msg">Backup Failed!!! May be you do not have enough storage left. Please try again</string>
    <string name="restore_failed_msg">Backup Restore Failed!!! May be there is no backup file exists!! Please try again</string>
    <string name="backup_desc">Backup Data to Phone/SD Card</string>
    <string name="cloud_backup_desc">Backup Data to Your Google Drive</string>
    <string name="restore_desc">Restore Data from Phone/SD Card</string>
    <string name="cloud_restore_desc">Restore Data from Your Google Drive</string>
    <string name="google_sign_in_server_client_id">166760414832-3kr6bpjs6a7rgt9hbfuouvgvs8ha9q0b.apps.googleusercontent.com</string>
    <string name="backup_progress_message">Please wait. Backup is in progress. This may take a while</string>
    <string name="restore_progress_message">Please wait. Backup is restoring. This may take a while</string>
    <string name="cloud_backup_done_title">Data Backup Done Successfully!!!</string>
    <string name="cloud_restore_done_title">Backup Data is Restored Successfully!!!</string>
    <string name="cloud_backup_done_message">Note Data is successfully backed up to your google drive. You can restore it anytime you want.\n<b>Caution!! Backup file is saved in your Google Drive. Please don\'t delete the file, otherwise all the backup data will be lost</b></string>
</resources>