<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/choose_color_menu"
        android:title="@string/choose_color"
        android:icon="@drawable/palette"
        app:showAsAction="always"/>

    <item android:id="@+id/add_image_menu"
        android:title="@string/add_image"
        android:icon="@drawable/folder_image"
        app:showAsAction="always"/>

    <item android:id="@+id/add_phone_no_menu"
        android:title="@string/add_phone_no"
        android:icon="@drawable/phone"
        app:showAsAction="always"/>

    <item android:id="@+id/add_audio_menu"
        android:title="@string/add_audio"
        android:icon="@drawable/microphone"
        app:showAsAction="always"/>

    <item android:id="@+id/add_tag_menu"
        android:title="@string/add_tag"
        android:icon="@drawable/tag"
        app:showAsAction="always"/>

    <item android:id="@+id/share_menu"
        android:title="@string/share_note"
        android:icon="@drawable/share"
        app:showAsAction="always"/>

</menu>