<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_an_option_to_continue"
        android:layout_margin="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_phone_number_manually"
        android:textSize="16sp"
        android:padding="16dp"
        android:drawableLeft="@drawable/person_add_black"
        android:drawablePadding="8dp"
        android:foreground="?attr/selectableItemBackground"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_from_contact"
        android:textSize="16sp"
        android:padding="16dp"
        android:drawableLeft="@drawable/call_black"
        android:drawablePadding="8dp"
        android:foreground="?attr/selectableItemBackground"
        />

</LinearLayout>