<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/backup_progress_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_margin="16sp"
            android:indeterminateTint="@color/blaze_hole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup_wait_msg"
            android:gravity="center"
            android:padding="8dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/backup_done_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView

            android:layout_margin="16sp"
            android:src="@drawable/done_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup_done_msg"
            android:gravity="center"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/got_it"
            android:background="@color/green"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="12dp"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>