<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/local_back_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blaze_hole"
                android:textColor="@color/white"
                android:text="@string/local_storage_backup"
                android:textSize="16sp"
                android:padding="8dp"
                android:drawableLeft="@drawable/local_backup"
                android:drawablePadding="8dp"/>

            <RadioGroup
                android:id="@+id/storage_option_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_below="@id/local_back_header">

                <RadioButton
                    android:id="@+id/phone_storage_option"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/blaze_hole"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_storage"
                    android:layout_margin="8dp"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/sd_card_storage_option"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/blaze_hole"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/sd_card_storage" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/storage_option_radio">

                <TextView
                    android:id="@+id/local_backup_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    android:text="@string/backup"
                    android:textAlignment="textStart"
                    android:foreground="?attr/selectableItemBackground"
                    android:drawableStart="@drawable/restore"
                    android:drawablePadding="8dp"/>


                <TextView
                    android:id="@+id/local_restore_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textAlignment="textStart"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_margin="8dp"
                    android:text="@string/restore"
                    android:drawableStart="@drawable/restore"
                    android:drawablePadding="8dp"/>


            </LinearLayout>



        </RelativeLayout>



    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="4dp">



    </android.support.v7.widget.CardView>

</LinearLayout>